# tcal

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  install.sh  package.nix
.github/workflows/: releases.yml
src/: cli.rs  edit.rs  error.rs  ical.rs  lib.rs  main.rs  template.rs  vcard.rs
src/edit/: parse.rs  render.rs  tree.rs
src/template/: datetime.rs  duration.rs  line.rs  mod.rs  model.rs  recurrence.rs  util.rs
tests/: fixtures.rs
tests/data/: icaljs_daily_recur.all.toml  icaljs_duration_instead_of_dtend.all.toml  icaljs_duration_instead_of_dtend.event.toml  icaljs_minimal.all.toml  icaljs_minimal.timezone.toml  icaljs_only_dtstart_date.all.toml  icaljs_only_dtstart_date.event.toml  libical_calendar.all.toml  meeting.all.toml  meeting.event.toml  meeting.ics  pyical_events_and_todos.all.toml  pyical_example.all.toml  pyical_freebusy.all.toml  pyical_freebusy.free-busy.toml  pyical_unicode.all.toml  recurring.all.toml  recurring.event.toml  recurring.ics
